--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
     "config": {
       "maxLambdaSize": "15mb", "runtime": "python.3.12"
     }
+  }, {
+    "src": "build_files.sh",
+    "use": "@vercel/static-build",
+    "config": {
+      "distDir": "staticfiles_build"
+    }
   }],
   "routes": [
     {
