--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "builds": [{
-        "src": "project/wsgi.py",
+        "src": "project/asgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
@@ -16,7 +16,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "project/wsgi.py"
+            "dest": "project/asgi.py"
         }
     ]
 }
