--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-    "builds": [{
-        "src": "project/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
+  "builds": [
         {
         "src": "project/asgi.py",
         "use": "@vercel/python",
@@ -19,11 +15,7 @@
             "src": "/static/(.*)",
             "dest": "/static/$1"
         },
-        {
-            "src": "/(.*)",
-            "dest": "project/wsgi.py"
-        },
-                {
+      {
             "src": "/(.*)",
             "dest": "project/asgi.py"
         }
