--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,10 @@ cryptography==42.0.2
 daphne==4.0.0
 dbus-python==1.2.18
 decorator==5.1.1
+defusedxml==0.8.0rc2
+distlib==0.3.7
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
 Django==4.2.9
 django-cleanup==7.0.0
 django-constance==2.9.1
