--- a/requirements.txt
+++ b/requirements.txt
@@ -1,207 +1,14 @@
-aiohttp==3.9.3
-aiosignal==1.3.1
-anyio==4.2.0
 asgiref==3.7.2
-astor==0.8.1
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==23.1.0
-autobahn==23.6.2
-Automat==22.10.0
-Babel==2.14.0
-bcrypt==3.2.0
-bidict==0.22.1
-black==21.12b0
-blinker==1.4
-certifi==2020.6.20
-cffi==1.16.0
-cfgv==3.4.0
-channels==4.0.0
-channels-redis==4.2.0
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-constantly==23.10.4
-coreapi==2.3.3
-coreschema==0.0.4
-coverage==6.3
-cryptography==42.0.2
-daphne==4.0.0
-dbus-python==1.2.18
-decorator==5.1.1
-defusedxml==0.8.0rc2
-distlib==0.3.7
-distro==1.7.0
 Django==4.2.9
-django-cleanup==7.0.0
-django-constance==2.9.1
-django-cors-headers==4.3.1
-django-filter==23.5
-django-picklefield==3.1
-django-redis==5.4.0
-django-templated-mail==1.1.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
-djoser==2.2.2
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-docxcompose==1.4.0
-docxtpl==0.16.7
-drf-nested-routers==0.93.4
-drf-yasg==1.21.7
-duplicity==0.8.21
-eradicate==2.3.0
-exceptiongroup==1.1.3
-executing==2.0.1
-factory-boy==3.3.0
-Faker==19.12.1
-fasteners==0.14.1
-filelock==3.13.1
-flake8==3.9.0
-flake8-absolute-import==1.0
-flake8-annotations==2.6.2
-flake8-broken-line==0.3.0
-flake8-bugbear==20.1.4
-flake8-eradicate==1.0.0
-flake8-mutable==1.2.0
-flake8-pep3101==1.3.0
-flake8-plugin-utils==1.3.3
-flake8-polyfill==1.0.2
-flake8-print==3.1.4
-flake8-printf-formatting==1.1.0
-flake8-pytest-style==0.5.0
-flake8-quotes==2.1.2
-flake8-simplify==0.14.0
-flake8-tuple-unpack-limit==0.0.1
-frozenlist==1.4.1
-future==0.18.2
-gunicorn==20.1.0
-h11==0.14.0
-httplib2==0.20.2
-httptools==0.6.1
-hyperlink==21.0.0
-identify==2.5.31
-idna==3.3
-importlib-metadata==4.6.4
-incremental==22.10.0
-inflection==0.5.1
-ipython==8.18.1
-isort==4.3.21
-itypes==1.2.0
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.1.2
-jsonschema==3.2.0
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-lxml==4.9.4
-macaroonbakery==1.3.1
-Mako==1.1.3
-Markdown==3.5.1
-markdown2==2.4.2
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.6
-mccabe==0.6.1
-monotonic==1.6
-more-itertools==8.10.0
-msgpack==1.0.7
-multidict==6.0.5
-mypy-extensions==1.0.0
-netifaces==0.11.0
-nodeenv==1.8.0
-oauthlib==3.2.0
-olefile==0.46
-packaging==23.2
-paramiko==2.9.3
-parso==0.8.3
-pathspec==0.11.2
-pep8-naming==0.9.1
-pexpect==4.8.0
-Pillow==9.0.0
-platformdirs==3.11.0
-pre-commit==2.17.0
-prompt-toolkit==3.0.43
-protobuf==3.12.4
-psycopg2-binary==2.9.3
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycairo==1.20.1
-pycodestyle==2.7.0
-pycparser==2.21
-pycups==2.0.1
-pyflakes==2.3.1
-Pygments==2.16.1
-PyGObject==3.42.1
-PyJWT==2.8.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyOpenSSL==24.0.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pyrsistent==0.18.1
-python-apt==2.4.0+ubuntu2
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-docx==1.1.0
-python-dotenv==1.0.0
-python-engineio==4.8.2
-python-socketio==5.11.0
-python3-openid==3.2.0
 pytz==2023.3.post1
-pyxdg==0.27
-PyYAML==5.4.1
-redis==5.0.1
-reportlab==3.6.8
-requests==2.25.1
-requests-oauthlib==1.3.1
-ruamel.yaml==0.18.3
-ruamel.yaml.clib==0.2.8
-SecretStorage==3.3.1
-sentry-sdk==1.5.4
-service-identity==24.1.0
-simple-websocket==1.0.0
-six==1.16.0
-sniffio==1.3.0
-social-auth-app-django==5.4.0
-social-auth-core==4.5.1
 sqlparse==0.4.4
-stack-data==0.6.3
-systemd-python==234
-texttable==1.6.4
-toml==0.10.2
-tomli==1.2.3
-traitlets==5.13.0
-Twisted==23.10.0
-txaio==23.1.1
-typing_extensions==4.8.0
 tzdata==2023.4
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-uritemplate==4.1.1
-urllib3==1.26.5
-usb-creator==0.3.7
-uvicorn==0.27.0.post1
-uvloop==0.19.0
-virtualenv==20.24.6
-wadllib==1.3.6
-watchfiles==0.21.0
-wcwidth==0.2.9
-websocket-client==1.2.3
-websockets==12.0
-wsproto==1.2.0
-xdg==5
-xkit==0.0.0
-yarl==1.9.4
-zipp==1.0.0
-zope.interface==6.1
+psycopg2-binary~=2.9.3
+django-cors-headers==4.3.1
+python-socketio==5.11.0
+aiohttp==3.9.3
+channels[daphne]==4.0.0
+redis==5.0.1
+channels-redis==4.2.0
+gunicorn==20.1.0
